# FEIXUE

./: .gitignore  CHANGELOG.md  GUIDE.en.md  GUIDE.ja.md  GUIDE.md  LICENSE  README.en.md  README.ja.md  README.md  build.ps1  feixue.spec  installer.iss  main.py  mochi.spec  pyproject.toml  release.ps1  test_json_parse.py  test_occasions_bug.py  test_real_scenario.py  test_truncation.py  功能清单.md  测试指南.md  测试素材_知识库.md
.github/workflows/: ci.yml
desktop_pet/: __init__.py  app.py  audit.py  clipclass.py  clipsampler.py  docs.py  hearing.py  hotkeys.py  i18n.py  journal.py  keepsakes.py  log.py  mcp_hub.py  occasions.py  persona.py  presence.py  proactive.py  reminders.py  remote.py  settings.py  skills.py  somatic.py  stats.py  tts.py  updater.py  usage.py  voice.py  voice_sfx.py  watcher.py  world.py
desktop_pet/agent/: __init__.py  bgtasks.py  duties.py  history.py  loop.py  loopdefs.py  progress.py  prompts.py  streaming.py  subagents.py  textops.py  toolhandlers.py  tools.py
desktop_pet/app/: __init__.py  agent_bridge.py  autonomy.py  core.py  lifecycle.py  qtenv.py  quick_actions.py  textflow.py  voice.py  worker.py
desktop_pet/companions/: __init__.py  boredom.py  context_classifier.py  dreams.py  feeding_ctrl.py  memory_fishing.py  memory_weather.py  playtime.py  project_tracker.py  rituals.py  screen_reactions.py  sensors.py  watchers.py  wellbeing.py  workflow.py  workshop.py  world_director.py
desktop_pet/emotion/: __init__.py  state.py  tags.py
desktop_pet/executor/: __init__.py  clipboard.py  devtools.py  fs.py  net.py  pycode.py  safety.py  shell.py  sysmem.py  vision.py  web.py
desktop_pet/eyes/: __init__.py  capture.py  detect.py  elements.py  radar.py  uia.py
desktop_pet/hands/: __init__.py  ghost.py  keyboard.py  mouse.py  windows.py
desktop_pet/i18n/: __init__.py  en.py  ja.py  zh.py
desktop_pet/memory/: __init__.py  embed.py  hybrid.py  store.py
desktop_pet/pet/: fx.py  (+38 more)
scripts/: build_performance_atlas.py  export_detector.py  strip_comments.py  strip_docstrings.py
tests/: _mainloop_scenario.py  conftest.py  test_agent_helpers.py  test_agent_init.py  test_agent_loop_audit.py  test_agent_run.py  test_bond_fishing.py  test_boredom_classify.py  test_capture_coords.py  test_companions_audit.py  test_computeruse.py  test_detect_nms.py  test_detect_tiles.py  test_docs.py  test_elements_helpers.py  test_emotion.py  test_executor_audit.py  test_fs_encoding.py  test_fs_tools.py  test_ghost.py  test_hearing.py  test_history_compress.py  test_history_viewer.py  test_hybrid.py  test_i18n_complete.py  test_loop_parallel.py  test_mainloop.py  test_memory.py  test_memory_panel.py  test_mouse_bounds.py  test_native_io_audit.py  test_ocr_filtering.py  test_perform.py  test_persistence_audit.py  test_pet_render_audit.py  test_portal_transit.py  test_release_metadata.py  test_retry.py  test_safety.py  test_screen_reactions_rules.py  (+9 more)
(+12 files in other folders)
