[project]
name = "desktop-pet"
version = "0.1.0"
description = "Desktop pet agent: LLM brain + computer-use, with control panel, memory and emotion."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "pyside6-essentials>=6.6",
    "pyautogui>=0.9.54",
    "mss>=9.0",
    "pillow>=10.0",
    "pywin32>=306",
    "uiautomation>=2.0",
    "pygetwindow>=0.0.9",
    "psutil>=5.9",
    "ddgs",
    "trafilatura>=1.8",
    "mcp>=1.27.2",
    "rapidocr-onnxruntime>=1.4.4",
    "pymupdf>=1.27.2.3",
    "pywinauto>=0.6.9",
    "edge-tts>=7.2.8",
]

[dependency-groups]
dev = ["pyinstaller>=6.6"]

[tool.uv]
package = false

# 国内镜像（阿里云）—— uv 项目级命令默认走它，加速下载。
# 注：清华 tuna 当时 TLS 握手失败连不上，故改用阿里云；tuna 恢复后可换回。
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
