[project]
name = "desktop-pet"
version = "0.4.0"
description = "Desktop pet agent: LLM brain + computer-use, with control panel, memory and emotion."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "pyside6-essentials>=6.6",
    "pyautogui>=0.9.54",
    "mss>=9.0",
    "pillow>=10.0",
    "pywin32>=306",
    "uiautomation>=2.0",
    "pygetwindow>=0.0.9",
    "psutil>=5.9",
    "ddgs",
    "trafilatura>=1.8",
    "mcp>=1.27.2",
    "rapidocr-onnxruntime>=1.4.4",
    "pymupdf>=1.27.2.3",
    "pywinauto>=0.6.9",
    # gpu加速 无gpu自动回退cpu
    "onnxruntime-directml>=1.24",
    "sherpa-onnx>=1.13.2",
    "sounddevice>=0.5.5",
    "edge-tts>=6.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.6",
]
# 单独成组 跑测试不必拽进重的 pyinstaller 跑 uv run --no-dev --group test python -m pytest tests/ -q
test = [
    "pytest>=8.0",
]

[tool.uv]
package = false
# 用directml版顶掉cpu版onnxruntime
override-dependencies = ["onnxruntime ; sys_platform == 'never'"]

# 阿里云镜像加速
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
